--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 
 # User-specific stuff
 **/.idea
-*.iml
+**.iml
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
